@@ -1,5 +1,12 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o Fixed an assertion failure with IPv6 traceroute trying to use an
+  unsupported protocol:
+    nmap: traceroute.cc:749: virtual unsigned char*
+    UDPProbe::build_packet(const sockaddr_storage*, u32*) const: Assertion
+    `source->ss_family == 2' failed.
+  This was reported by Pierre Emeriaud. [David Fifield]
+
 o [NSE] Added oracle-brute-stealth which exploits CVE-2012-3137, a weakness
   in the Oracle O5LOGIN authentication scheme. [Dhiru Kholia]
 
